# src/routes/index.js
@@ -5,7 +5,7 @@ const router = express.Router();
 
 //router.use("/games", require("./games"));
 router.use("/consoles", require("./consoles"));
-//router.use("/users", require("./users"));
+router.use("/users", require("./users"));
 //router.use("/copies", require("./copies"));
 
 module.exports = router;
